# server/routes/admin/order-item/orderItem.routes.ts
@@ -1,0 +1,13 @@
+import { Router } from "express";
+import {
+  getAllOrderItemsController,
+  updateOrderItemController,
+} from "../../../controllers/order-item/orderItemController.js";
+
+const router = Router();
+
+// order-item
+router.get("/:orderId", getAllOrderItemsController);
+router.patch("/:orderItemId", updateOrderItemController);
+
+export default router;
